implements file-service and chat-service, add update and upload avatar method for profile service